--- a/odinProject/projects/marketx/css/style.css
+++ b/odinProject/projects/marketx/css/style.css
@@ -2,11 +2,15 @@
     font-size: 26px;
     color: black;
 }
+p{
+    background-color: aliceblue;
+}
 h1{
     text-align: center;
     font-size: 50px;
     background-color: yellow;
     color: blue;
+    margin: auto;
 }
 h2{
     text-align: center;
@@ -20,6 +24,12 @@ li{
 
 img{
     text-align: center;
-    height: 600px;
-    width: 400px;
+    height: 300px;
+    width: 300px;
+    border: 2px solid seagreen;
+}
+
+.item{
+    margin: auto;
+text-align: center;
 }
